kubernetes/graphics-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphics-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphics-worker
  template:
    metadata:
      labels:
        app: graphics-worker
    spec:
      containers:
        - name: graphics-worker-container
          image: websdr-transceiver/gnu-graphics-worker:latest #TODO
          imagePullPolicy: IfNotPresent
