kubernetes/nginx_proxy_manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-manager
  labels:
    app: nginx-proxy-manager
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-proxy-manager
  template:
    metadata:
      labels:
        app: nginx-proxy-manager
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: npm
          image: jc21/nginx-proxy-manager:latest
          ports:
            - containerPort: 80
            - containerPort: 81
            - containerPort: 443
          volumeMounts:
            - name: data
              mountPath: /data
            - name: letsencrypt
              mountPath: /etc/letsencrypt
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: npm-data
        - name: letsencrypt
          persistentVolumeClaim:
            claimName: npm-letsencrypt
